# dovga

./: .gitignore  README.md  app.py  data_provider.py  find_court_uk.py  leven.py  main.py  make_document.py  marks.md  old.py  pyproject.toml  start_app.bat  t.py  test.py  utils.py  Данные_о_УК.xlsx  Данные_о_судах.xlsx  Запуск.bat  Суды.xlsx  УправляющиеКомпании.xlsx
assets/: streets.txt
documents/: Заявление_Военное_шоссе_5_37.docx  Заявление_Лермонтова_27а_34.docx  Заявление_Проспект_Красного_Знамени_119_3.docx
documents_docx/: Заявление_Военное_шоссе_5_37.docx  Заявление_Лермонтова_27а_34.docx  Заявление_Проспект_Красного_Знамени_119_3.docx
lib/: data_provider.py  document_parser.py  find_court_uk.py  make_document.py  ocr.py  page.py  regexs.py  statement.py  table_parser.py  text_opetations.py  utils.py
reports/: Судебные_приказы_20250727.xlsx
tools/: hsv.py
