[project]
name = "dvg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "easyocr>=1.7.2",
    "flet[all]==0.28.3",
    "img2table>=1.4.1",
    "imutils>=0.5.4",
    "levenshtein>=0.27.1",
    "num2words>=0.5.14",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdf2image>=1.17.0",
    "prettyprint>=0.1.5",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "scikit-image>=0.24.0",
]
